[tool.poetry]
name = "pytest-nhsd-apim"
version = "3.3.1"
description = "Pytest plugin accessing NHSDigital's APIM proxies"
authors = ["Ben Strutt <ben.strutt1@nhs.net>", "Adrian Ciobanita <adrian.ciobanita1@nhs.net>", "Alex Carrie <alexander.carrie1@nhs.net>", "Lucas Fantini <lucas.fantini@nhs.net>"]
maintainers = ["Ben Strutt <ben.strutt1@nhs.net>", "Alex Carrie <alexander.carrie1@nhs.net>"]
readme = "README.md"
repository = "https://github.com/NHSDigital/pytest-nhsd-apim"
classifiers = ["Framework :: Pytest"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^0.15"
cryptography = "^38"
lxml = "^4"
pycryptodome = "^3"
pydantic = "^1"
pyjwt = "^2"
pyotp = "^2"
pytest = "^6"
requests = "^2"
toml = "^0.10"
typing-extensions = "^4"
wheel = "^0.37"


[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
