[tool.poetry]
name = "pytest-nhsd-apim"
version = "5.0.9"
description = "Pytest plugin accessing NHSDigital's APIM proxies"
authors = ["Adrian Ciobanita <adrian.ciobanita1@nhs.net>", "Alex Carrie <alexander.carrie1@nhs.net>", "Lucas Fantini <lucas.fantini@nhs.net>"]
maintainers = ["Alex Carrie <alexander.carrie1@nhs.net>", "Alex Hawdon <alex.hawdon1@nhs.net"]
readme = "README.md"
repository = "https://github.com/NHSDigital/pytest-nhsd-apim"
classifiers = ["Framework :: Pytest"]
license = "MIT"

[tool.poetry.dependencies]
Authlib = "^1.3.1"
cryptography = ">42.0.0"
lxml = "^5.3.1"
python = "^3.13"
pycryptodome = "^3.20.0"
PyJWT = "^2.8.0"
pyotp = "^2.9.0"
pytest = "^8.2.0"
requests = "^2.32.0"
toml = "^0.10.2"
typing-extensions = "^4.12.2"
pydantic = "^2.9.2"
wheel = ">=0.37.1,<0.39.0"
pydantic-settings = "^2.2.1"
setuptools = "^70.0.0"

# [tool.poetry.group.dev.dependencies]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
